`Debian Image Builder`
userdata.txt file maintenance

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -227,6 +227,8 @@ clear -x
 
 # userdata-txt
 if [[ -f "userdata.txt" ]]; then
+	sed -i 's/=0/="0"/g' userdata.txt
+	sed -i 's/=1/="1"/g' userdata.txt
 	echo -e "userdata file created."
 	exit 0
 fi
