--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # builder version
-BUILDER="5.5"
+BUILDER="5.6"
 
 # script
 if [[ `curl -I https://github.com 2>&1 | grep 'HTTP/2 200'` ]]; then
@@ -139,6 +139,10 @@ echo EMMC=0 >> tmp0
 echo AIRCRACK=0 >> tmp0
 echo ROOTPASSWD=0 >> tmp0
 echo USER_PKGS='"''"' >> tmp0
+echo 'CLANG="0" # supported: ubuntu jammy' >> tmp0
+echo 'CLANG_VERSION="clang-15"' >> tmp0
+echo 'CLANG_LLVM="LLVM=-15 LLVM_IAS=1"' >> tmp0
+echo LTO_CLANG_THIN=0 >> tmp0
 echo CORES=\`nproc\` >> tmp0
 echo CFLAGS='"''"' >> tmp0
 echo KBUSER='"'marvin'"' >> tmp0
@@ -186,11 +190,11 @@ sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
 sed -i '17i### WIRELESS' userdata.txt
 sed -i '22i### CUSTOM' userdata.txt
 sed -i '35i### COMPILER TUNING' userdata.txt
-sed -i '38i### WHOAMI AND HOST' userdata.txt
-sed -i '41i### LOCALES' userdata.txt
-sed -i '49i### TIMEZONE' userdata.txt
-sed -i '54i### NAME SERVER' userdata.txt
-sed -i '57i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '42i### WHOAMI AND HOST' userdata.txt
+sed -i '45i### LOCALES' userdata.txt
+sed -i '53i### TIMEZONE' userdata.txt
+sed -i '58i### NAME SERVER' userdata.txt
+sed -i '61i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # customize your image
 custom_txt(){
@@ -229,6 +233,7 @@ clear -x
 if [[ -f "userdata.txt" ]]; then
 	sed -i 's/=0/="0"/g' userdata.txt
 	sed -i 's/=1/="1"/g' userdata.txt
+	sed -i 's/LLVM_IAS="1"/LLVM_IAS=1/g' userdata.txt
 	echo -e "userdata file created."
 	exit 0
 fi
