--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -135,18 +135,18 @@ echo DEVROOTFS= >> tmp0
 echo COMPRESS_IMG= >> tmp0
 echo USCRIPTS= >> tmp0
 echo USERACCT= >> tmp0
-echo EMMC=0 >> tmp0
-echo AIRCRACK=0 >> tmp0
-echo ROOTPASSWD=0 >> tmp0
-echo USER_PKGS='"''"' >> tmp0
-echo 'CLANG="0" # supported: ubuntu jammy' >> tmp0
+echo 'EMMC="0"' >> tmp0
+echo 'AIRCRACK="0"' >> tmp0
+echo 'ROOTPASSWD="0"' >> tmp0
+echo 'USER_PKGS=""' >> tmp0
+echo 'CLANG="0"' >> tmp0
 echo 'CLANG_VERSION="clang-15"' >> tmp0
 echo 'CLANG_LLVM="LLVM=-15 LLVM_IAS=1"' >> tmp0
-echo LTO_CLANG_THIN=0 >> tmp0
+echo 'LTO_CLANG_THIN="0"' >> tmp0
 echo CORES=\`nproc\` >> tmp0
-echo CFLAGS='"''"' >> tmp0
-echo KBUSER='"'marvin'"' >> tmp0
-echo KBHOST='"'martian'"' >> tmp0
+echo 'CFLAGS=""' >> tmp0
+echo 'KBUSER="marvin"' >> tmp0
+echo 'KBHOST="martian"' >> tmp0
 echo "set_locales(){" >> tmp0
 echo "apt install -y locales" >> tmp0
 echo "export LANGUAGE=${LOCALE}" >> tmp0
