--- a/defconfig/odroid_defconfig
+++ b/defconfig/odroid_defconfig
@@ -1169,6 +1169,11 @@ CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_LEDS_TRIGGER_PANIC=y
 CONFIG_LEDS_TRIGGER_NETDEV=m
 CONFIG_RTC_CLASS=y
+CONFIG_RTC_DRV_DS1307=m
+CONFIG_RTC_DRV_DS1307_CENTURY=y
+CONFIG_RTC_DRV_DS1374=m
+CONFIG_RTC_DRV_DS1374_WDT=y
+CONFIG_RTC_DRV_DS1672=m
 CONFIG_RTC_DRV_HYM8563=m
 CONFIG_RTC_DRV_PCF8563=m
 CONFIG_RTC_DRV_DS3232=y
