--- a/defconfig/rockchip64-rk356x_defconfig
+++ b/defconfig/rockchip64-rk356x_defconfig
@@ -82,17 +82,6 @@ CONFIG_ARM_SCPI_CPUFREQ=y
 CONFIG_ARM_SCMI_CPUFREQ=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
-CONFIG_CRYPTO_SHA1_ARM64_CE=y
-CONFIG_CRYPTO_SHA2_ARM64_CE=y
-CONFIG_CRYPTO_SHA512_ARM64_CE=y
-CONFIG_CRYPTO_SHA3_ARM64=y
-CONFIG_CRYPTO_SM3_ARM64_CE=y
-CONFIG_CRYPTO_SM4_ARM64_CE=y
-CONFIG_CRYPTO_GHASH_ARM64_CE=y
-CONFIG_CRYPTO_AES_ARM64=y
-CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
-CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
-CONFIG_CRYPTO_AES_ARM64_BS=y
 CONFIG_JUMP_LABEL=y
 # CONFIG_STACKPROTECTOR is not set
 CONFIG_MODULES=y
@@ -202,7 +191,6 @@ CONFIG_NFT_CT=y
 CONFIG_NFT_FLOW_OFFLOAD=y
 CONFIG_NFT_CONNLIMIT=y
 CONFIG_NFT_LOG=y
-CONFIG_NETFILTER_XT_TARGET_LOG=m
 CONFIG_NFT_LIMIT=y
 CONFIG_NFT_MASQ=y
 CONFIG_NFT_REDIR=y
@@ -230,6 +218,7 @@ CONFIG_NF_FLOW_TABLE_PROCFS=y
 CONFIG_NETFILTER_XT_SET=m
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=m
 CONFIG_NETFILTER_XT_TARGET_LED=m
+CONFIG_NETFILTER_XT_TARGET_LOG=m
 CONFIG_NETFILTER_XT_TARGET_MARK=m
 CONFIG_NETFILTER_XT_TARGET_NFLOG=m
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
@@ -417,7 +406,6 @@ CONFIG_NET_SCH_HFSC=y
 CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_FQ=y
 CONFIG_NET_CLS_BASIC=y
-CONFIG_NET_CLS_TCINDEX=y
 CONFIG_NET_CLS_ROUTE4=y
 CONFIG_NET_CLS_FW=y
 CONFIG_NET_CLS_CGROUP=y
@@ -463,6 +451,7 @@ CONFIG_BT_MTKSDIO=m
 CONFIG_BT_MTKUART=m
 CONFIG_CFG80211=m
 CONFIG_MAC80211=m
+CONFIG_MAC80211_MESH=y
 CONFIG_MAC80211_LEDS=y
 CONFIG_RFKILL=y
 CONFIG_RFKILL_INPUT=y
@@ -506,7 +495,9 @@ CONFIG_PCI=y
 CONFIG_PCIEPORTBUS=y
 CONFIG_PCIE_PTM=y
 CONFIG_HOTPLUG_PCI=y
+CONFIG_PCI_HOST_GENERIC=m
 CONFIG_PCIE_ROCKCHIP_HOST=y
+CONFIG_PCIE_DW_PLAT_HOST=y
 CONFIG_PCIE_ROCKCHIP_DW_HOST=y
 CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
@@ -540,6 +531,7 @@ CONFIG_NVME_TARGET_LOOP=m
 CONFIG_NVME_TARGET_TCP=m
 CONFIG_ENCLOSURE_SERVICES=m
 CONFIG_SRAM=y
+CONFIG_DW_XDATA_PCIE=m
 CONFIG_MISC_RTSX_PCI=m
 CONFIG_MISC_RTSX_USB=m
 CONFIG_BLK_DEV_SD=y
@@ -641,7 +633,8 @@ CONFIG_STMMAC_ETH=y
 CONFIG_DWMAC_DWC_QOS_ETH=y
 CONFIG_STMMAC_PCI=m
 # CONFIG_NET_VENDOR_SUN is not set
-# CONFIG_NET_VENDOR_SYNOPSYS is not set
+CONFIG_DWC_XLGMAC=m
+CONFIG_DWC_XLGMAC_PCI=m
 # CONFIG_NET_VENDOR_TEHUTI is not set
 # CONFIG_NET_VENDOR_TI is not set
 # CONFIG_NET_VENDOR_VERTEXCOM is not set
@@ -649,13 +642,20 @@ CONFIG_STMMAC_PCI=m
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_LED_TRIGGER_PHY=y
+CONFIG_MEDIATEK_GE_PHY=m
 CONFIG_MOTORCOMM_PHY=y
 CONFIG_ROCKCHIP_PHY=y
+CONFIG_MDIO_BITBANG=m
+CONFIG_MDIO_BUS_MUX_GPIO=m
+CONFIG_MDIO_BUS_MUX_MULTIPLEXER=m
+CONFIG_MDIO_BUS_MUX_MMIOREG=m
 CONFIG_USB_RTL8152=m
 # CONFIG_USB_NET_AX8817X is not set
 # CONFIG_USB_NET_AX88179_178A is not set
 CONFIG_USB_NET_CDC_EEM=m
 CONFIG_USB_NET_CDC_MBIM=m
+CONFIG_USB_NET_SMSC75XX=m
+CONFIG_USB_NET_SMSC95XX=m
 # CONFIG_USB_NET_NET1080 is not set
 # CONFIG_USB_NET_CDC_SUBSET is not set
 # CONFIG_USB_NET_ZAURUS is not set
@@ -689,6 +689,10 @@ CONFIG_MT7921U=m
 # CONFIG_WLAN_VENDOR_MICROCHIP is not set
 # CONFIG_WLAN_VENDOR_PURELIFI is not set
 CONFIG_RT2X00=m
+CONFIG_RT2400PCI=m
+CONFIG_RT2500PCI=m
+CONFIG_RT61PCI=m
+CONFIG_RT2800PCI=m
 CONFIG_RT2500USB=m
 CONFIG_RT73USB=m
 CONFIG_RT2800USB=m
@@ -696,15 +700,20 @@ CONFIG_RT2800USB_RT3573=y
 CONFIG_RT2800USB_RT53XX=y
 CONFIG_RT2800USB_RT55XX=y
 CONFIG_RT2800USB_UNKNOWN=y
+CONFIG_RTL8180=m
 CONFIG_RTL8187=m
 CONFIG_RTL8XXXU=m
 CONFIG_RTL8XXXU_UNTESTED=y
 CONFIG_RTW88=m
+CONFIG_RTW88_8822BE=m
 CONFIG_RTW88_8822CE=m
+CONFIG_RTW88_8723DE=m
+CONFIG_RTW88_8821CE=m
 CONFIG_RTW88_DEBUG=y
 CONFIG_RTW88_DEBUGFS=y
 CONFIG_RTW89=m
 CONFIG_RTW89_8852AE=m
+CONFIG_RTW89_8852CE=m
 CONFIG_RTW89_DEBUGMSG=y
 CONFIG_RTW89_DEBUGFS=y
 # CONFIG_WLAN_VENDOR_RSI is not set
@@ -749,8 +758,12 @@ CONFIG_I2C_MUX_GPMUX=m
 CONFIG_I2C_MUX_PINCTRL=m
 CONFIG_I2C_MUX_REG=m
 CONFIG_I2C_DEMUX_PINCTRL=m
+CONFIG_I2C_DESIGNWARE_SLAVE=y
+CONFIG_I2C_DESIGNWARE_PLATFORM=m
+CONFIG_I2C_DESIGNWARE_PCI=m
 CONFIG_I2C_GPIO=y
 CONFIG_I2C_RK3X=y
+CONFIG_I2C_TINY_USB=m
 CONFIG_SPI=y
 CONFIG_SPI_DESIGNWARE=y
 CONFIG_SPI_DW_DMA=y
@@ -760,9 +773,13 @@ CONFIG_SPI_ROCKCHIP=y
 CONFIG_SPI_ROCKCHIP_SFC=y
 CONFIG_SPI_MUX=m
 # CONFIG_PTP_1588_CLOCK is not set
+CONFIG_PINCTRL_AS3722=m
+CONFIG_PINCTRL_AXP209=m
 CONFIG_PINCTRL_RK805=y
 CONFIG_PINCTRL_SINGLE=m
 CONFIG_GPIO_SYSFS=y
+CONFIG_GPIO_74XX_MMIO=m
+CONFIG_GPIO_DWAPB=m
 CONFIG_GPIO_GENERIC_PLATFORM=m
 CONFIG_GPIO_SYSCON=m
 CONFIG_W1=m
@@ -790,6 +807,7 @@ CONFIG_W1_SLAVE_DS2780=m
 CONFIG_W1_SLAVE_DS2781=m
 CONFIG_W1_SLAVE_DS28E04=m
 CONFIG_W1_SLAVE_DS28E17=m
+CONFIG_POWER_RESET_AS3722=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
 CONFIG_BATTERY_CW2015=y
@@ -820,11 +838,15 @@ CONFIG_WATCHDOG_SYSFS=y
 CONFIG_WATCHDOG_HRTIMER_PRETIMEOUT=y
 CONFIG_WATCHDOG_PRETIMEOUT_GOV=y
 CONFIG_SOFT_WATCHDOG=m
+CONFIG_GPIO_WATCHDOG=m
 CONFIG_DW_WATCHDOG=y
+CONFIG_MFD_AS3722=m
 CONFIG_MFD_AXP20X_I2C=m
 CONFIG_MFD_RK808=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
+CONFIG_REGULATOR_USERSPACE_CONSUMER=m
+CONFIG_REGULATOR_ACT8865=m
 CONFIG_REGULATOR_ARM_SCMI=m
 CONFIG_REGULATOR_FAN53555=y
 CONFIG_REGULATOR_FAN53880=y
@@ -894,6 +916,7 @@ CONFIG_VIDEO_MUX=y
 CONFIG_VIDEO_CAFE_CCIC=y
 CONFIG_VIDEO_ROCKCHIP_RGA=y
 CONFIG_VIDEO_ROCKCHIP_ISP1=y
+CONFIG_VIDEO_HANTRO=y
 CONFIG_VIDEO_IR_I2C=m
 CONFIG_VIDEO_TVAUDIO=m
 CONFIG_VIDEO_VPX3220=m
@@ -1104,7 +1127,6 @@ CONFIG_R8188EU=m
 CONFIG_RTS5208=m
 CONFIG_FB_SM750=m
 CONFIG_STAGING_MEDIA=y
-CONFIG_VIDEO_HANTRO=y
 CONFIG_VIDEO_ROCKCHIP_VDEC=y
 CONFIG_STAGING_BOARD=y
 CONFIG_COMMON_CLK_RK808=y
@@ -1159,9 +1181,9 @@ CONFIG_PHY_ROCKCHIP_USB=y
 CONFIG_ARM_CCI_PMU=y
 # CONFIG_ARM_CCI5xx_PMU is not set
 CONFIG_RAS=y
-CONFIG_ROCKCHIP_EFUSE=y
-CONFIG_ROCKCHIP_OTP=y
 CONFIG_NVMEM_RMEM=m
+CONFIG_NVMEM_ROCKCHIP_EFUSE=m
+CONFIG_NVMEM_ROCKCHIP_OTP=m
 CONFIG_TEE=y
 CONFIG_OPTEE=y
 CONFIG_MUX_GPIO=m
@@ -1247,10 +1269,9 @@ CONFIG_CRYPTO_PCRYPT=y
 CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_ECDSA=y
 CONFIG_CRYPTO_CURVE25519=y
+CONFIG_CRYPTO_ARC4=y
 CONFIG_CRYPTO_CHACHA20POLY1305=y
 CONFIG_CRYPTO_MD4=y
-CONFIG_CRYPTO_ARC4=y
-CONFIG_CRYPTO_DES=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_CRYPTO_ZSTD=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
@@ -1258,6 +1279,17 @@ CONFIG_CRYPTO_USER_API_HASH=y
 CONFIG_CRYPTO_USER_API_SKCIPHER=y
 CONFIG_CRYPTO_USER_API_RNG=y
 CONFIG_CRYPTO_USER_API_AEAD=y
+CONFIG_CRYPTO_GHASH_ARM64_CE=y
+CONFIG_CRYPTO_SHA1_ARM64_CE=y
+CONFIG_CRYPTO_SHA2_ARM64_CE=y
+CONFIG_CRYPTO_SHA512_ARM64_CE=y
+CONFIG_CRYPTO_SHA3_ARM64=y
+CONFIG_CRYPTO_SM3_ARM64_CE=y
+CONFIG_CRYPTO_AES_ARM64=y
+CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
+CONFIG_CRYPTO_AES_ARM64_BS=y
+CONFIG_CRYPTO_SM4_ARM64_CE=y
+CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_DEV_ROCKCHIP=y
 CONFIG_PKCS8_PRIVATE_KEY_PARSER=y
 CONFIG_CORDIC=y
