--- a/defconfig/odroid-xu4_defconfig
+++ b/defconfig/odroid-xu4_defconfig
@@ -47,7 +47,7 @@ CONFIG_HIGHMEM=y
 CONFIG_ARM_APPENDED_DTB=y
 CONFIG_ARM_ATAG_DTB_COMPAT=y
 CONFIG_ARM_ATAG_DTB_COMPAT_CMDLINE_EXTEND=y
-CONFIG_CMDLINE="s5p_mfc.mem=16M"
+CONFIG_CMDLINE=""
 CONFIG_CMDLINE_EXTEND=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
