Make shrink optional
Give shrink a logical definition

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -57,6 +57,7 @@ MYCONFIG=""
 LOGGING="0"
 VERBOSE="0"
 DEVROOTFS="1"
+SHRINK="0"
 COMPRESS_IMG="0"
 USCRIPTS="0"
 
@@ -100,9 +101,10 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	" Logging:"		29 1	"$LOGGING"		29 11 2 0 \
 	" Verbosity:"		30 1	"$VERBOSE"		30 13 2 0 \
 	" Devel Rootfs:"	31 1	"$DEVROOTFS"		31 16 2 0 \
-	" Compress img:"	32 1	"$COMPRESS_IMG"		32 16 2 0 \
-	" User scripts:"	33 1	"$USCRIPTS"		33 16 2 0 \
-	" User service:"	34 1	"$USERACCT"		34 16 2 0 \
+	" Shrink Rootfs:"	32 1	"$SHRINK"		32 17 2 0 \
+	" Compress img:"	33 1	"$COMPRESS_IMG"		33 16 2 0 \
+	" User scripts:"	34 1	"$USCRIPTS"		34 16 2 0 \
+	" User service:"	35 1	"$USERACCT"		35 16 2 0 \
 2>&1 1>&3)
 
 # close fd
@@ -132,6 +134,7 @@ echo MYCONFIG='"' >> tmp0
 echo LOGGING= >> tmp0
 echo VERBOSE= >> tmp0
 echo DEVROOTFS= >> tmp0
+echo SHRINK= >> tmp0
 echo COMPRESS_IMG= >> tmp0
 echo USCRIPTS= >> tmp0
 echo USERACCT= >> tmp0
@@ -189,12 +192,12 @@ sed -i '6i### DISTRIBUTION AND RELEASE' userdata.txt
 sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
 sed -i '17i### WIRELESS' userdata.txt
 sed -i '22i### CUSTOM' userdata.txt
-sed -i '35i### COMPILER TUNING' userdata.txt
-sed -i '42i### WHOAMI AND HOST' userdata.txt
-sed -i '45i### LOCALES' userdata.txt
-sed -i '53i### TIMEZONE' userdata.txt
-sed -i '58i### NAME SERVER' userdata.txt
-sed -i '61i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '36i### COMPILER TUNING' userdata.txt
+sed -i '43i### WHOAMI AND HOST' userdata.txt
+sed -i '46i### LOCALES' userdata.txt
+sed -i '54i### TIMEZONE' userdata.txt
+sed -i '59i### NAME SERVER' userdata.txt
+sed -i '62i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # customize your image
 custom_txt(){
