--- a/defconfig/odroid_defconfig
+++ b/defconfig/odroid_defconfig
@@ -1235,6 +1235,8 @@ CONFIG_ARM_CCI_PMU=m
 CONFIG_NVMEM_SPMI_SDAM=m
 CONFIG_MESON_EFUSE=y
 CONFIG_MESON_MX_EFUSE=y
+CONFIG_NVMEM_MESON_EFUSE=y
+CONFIG_NVMEM_MESON_MX_EFUSE=y
 CONFIG_NVMEM_RMEM=m
 CONFIG_STM=y
 CONFIG_STM_PROTO_BASIC=m
