`Debian Image Builder`
BananaPi CM4IO wireless support

Signed-off-by: Patrick Yavitz <pyavitz@gmail.com>

--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -451,8 +451,10 @@ CONFIG_RTL8XXXU_UNTESTED=y
 CONFIG_RTW88=m
 CONFIG_RTW88_8822BE=m
 CONFIG_RTW88_8822CE=m
+CONFIG_RTW88_8822CS=m
 CONFIG_RTW88_8723DE=m
 CONFIG_RTW88_8821CE=m
+CONFIG_RTW88_8821CS=m
 CONFIG_RTW89=m
 CONFIG_RTW89_8852AE=m
 CONFIG_RTW89_8852CE=m
