Define Dev_Device and add nvme support

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # builder version
-BUILDER="5.7"
+BUILDER="5.8"
 
 # script
 if [[ `curl -I https://github.com 2>&1 | grep 'HTTP/2 200'` ]]; then
@@ -215,6 +215,9 @@ echo 'ENABLE_SHRINK="true"' >> custom.txt
 echo "" >> custom.txt
 echo "# Compression Types: xz zst" >> custom.txt
 echo 'IMG_COMPRESSION="xz"' >> custom.txt
+echo "" >> custom.txt
+echo "# Dev  Device: loop, mmcblkX, nvme0n1 or nvme1n1, sdX" >> custom.txt
+echo 'Dev_Device="loop"' >> custom.txt
 echo "" >> custom.txt
 echo "### DO NOT EDIT BELOW THIS LINE" >> custom.txt
 echo "# CUSTOM=${BUILDER}" >> custom.txt
