defconfig: `CONFIG_SND_SOC_ES8316=m`
I'm told this produces dmesg spam, so set to `m`.
https://github.com/pyavitz/debian-image-builder/issues/70

Signed-off-by: Patrick Yavitz <pyavitz@gmail.com>

--- a/defconfig/rockchip64-rk3399_defconfig
+++ b/defconfig/rockchip64-rk3399_defconfig
@@ -893,7 +893,7 @@ CONFIG_SND_SOC_RK3399_GRU_SOUND=y
 CONFIG_SND_SOC_AC97_CODEC=m
 CONFIG_SND_SOC_ALC5623=m
 CONFIG_SND_SOC_BT_SCO=y
-CONFIG_SND_SOC_ES8316=y
+CONFIG_SND_SOC_ES8316=m
 CONFIG_SND_SOC_RK3328=m
 CONFIG_SND_SOC_RK817=m
 CONFIG_SND_SOC_RT5616=m
