--- a/defconfig/rockchip64_defconfig
+++ b/defconfig/rockchip64_defconfig
@@ -827,7 +827,7 @@ CONFIG_SND_SOC_XTFPGA_I2S=m
 CONFIG_SND_SOC_AC97_CODEC=m
 CONFIG_SND_SOC_ALC5623=m
 CONFIG_SND_SOC_BT_SCO=y
-CONFIG_SND_SOC_ES8316=y
+CONFIG_SND_SOC_ES8316=m
 CONFIG_SND_SOC_RK3328=y
 CONFIG_SND_SOC_RK817=m
 CONFIG_SND_SOC_RT5616=m
