--- a/defconfig/rockchip_defconfig
+++ b/defconfig/rockchip_defconfig
@@ -784,7 +784,7 @@ CONFIG_SND_SOC_ADAU7118_I2C=m
 CONFIG_SND_SOC_ALC5623=m
 CONFIG_SND_SOC_BT_SCO=y
 CONFIG_SND_SOC_DMIC=y
-CONFIG_SND_SOC_ES8316=y
+CONFIG_SND_SOC_ES8316=m
 CONFIG_SND_SOC_INNO_RK3036=m
 CONFIG_SND_SOC_MAX98357A=y
 CONFIG_SND_SOC_RK3328=m
