--- a/defconfig/rockchip64-rk356x_defconfig
+++ b/defconfig/rockchip64-rk356x_defconfig
@@ -985,7 +985,7 @@ CONFIG_SND_SOC_RK3288_HDMI_ANALOG=m
 CONFIG_SND_SOC_RK3399_GRU_SOUND=y
 CONFIG_SND_SOC_AC97_CODEC=m
 CONFIG_SND_SOC_BT_SCO=y
-CONFIG_SND_SOC_ES8316=y
+CONFIG_SND_SOC_ES8316=m
 CONFIG_SND_SOC_RK3328=m
 CONFIG_SND_SOC_RK817=m
 CONFIG_SND_SOC_SIMPLE_AMPLIFIER=y
