`Debian Image Builder`
CONFIG_ARM_MODULE_PLTS=y

The relocations fail when loading modules and PLTs are not enbabled.
REVERT: https://github.com/pyavitz/debian-image-builder/commit/93d4115df0b02b5cde5cdf8b58c163078e6f1c26

Signed-off-by: Patrick Yavitz <pyavitz@gmail.com>

--- a/defconfig/meson8b_defconfig
+++ b/defconfig/meson8b_defconfig
@@ -58,7 +58,7 @@ CONFIG_ARM_ERRATA_857272=y
 CONFIG_SMP=y
 CONFIG_MCPM=y
 CONFIG_NR_CPUS=16
-# CONFIG_ARM_MODULE_PLTS is not set
+CONFIG_ARM_MODULE_PLTS=y
 CONFIG_DEPRECATED_PARAM_STRUCT=y
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
