--- a/defconfig/sun7i_defconfig
+++ b/defconfig/sun7i_defconfig
@@ -34,7 +34,7 @@ CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
 CONFIG_HZ_300=y
 CONFIG_HIGHMEM=y
-# CONFIG_ARM_MODULE_PLTS is not set
+CONFIG_ARM_MODULE_PLTS=y
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
 CONFIG_EFI=y
