RTW88: `Linux 6.1` `USB FIXES`
Backport fixes from Linux 6.3

dmesg | grep rtw
[    8.684999] rtw_8821cu 4-1:1.0: Firmware version 24.11.0, H2C version 12
[    9.426555] usbcore: registered new interface driver rtw_8821cu
lsmod | grep rtw88
rtw88_8821cu           16384  0
rtw88_8821c            81920  1 rtw88_8821cu
rtw88_usb              20480  1 rtw88_8821cu
rtw88_core            131072  2 rtw88_usb,rtw88_8821c
mac80211              458752  2 rtw88_core,rtw88_usb
cfg80211              331776  2 rtw88_core,mac80211

Signed-off-by: Patrick Yavitz <pyavitz@gmail.com>

--- a/defconfig/odroid_defconfig
+++ b/defconfig/odroid_defconfig
@@ -659,6 +659,7 @@ CONFIG_MT76x0U=m
 CONFIG_MT76x2U=m
 CONFIG_MT7663U=m
 CONFIG_MT7663S=m
+CONFIG_MT7921S=m
 CONFIG_MT7921U=m
 # CONFIG_WLAN_VENDOR_MICROCHIP is not set
 # CONFIG_WLAN_VENDOR_PURELIFI is not set
@@ -683,10 +684,13 @@ CONFIG_RTL8192CU=m
 CONFIG_RTL8XXXU=m
 CONFIG_RTL8XXXU_UNTESTED=y
 CONFIG_RTW88=m
-CONFIG_RTW88_8822BE=m
-CONFIG_RTW88_8822CE=m
-CONFIG_RTW88_8723DE=m
-CONFIG_RTW88_8821CE=m
+CONFIG_RTW88_8822BS=m
+CONFIG_RTW88_8822BU=m
+CONFIG_RTW88_8822CS=m
+CONFIG_RTW88_8822CU=m
+CONFIG_RTW88_8723DU=m
+CONFIG_RTW88_8821CS=m
+CONFIG_RTW88_8821CU=m
 # CONFIG_WLAN_VENDOR_RSI is not set
 # CONFIG_WLAN_VENDOR_SILABS is not set
 # CONFIG_WLAN_VENDOR_ST is not set
