--- a/defconfig/sun7i_defconfig
+++ b/defconfig/sun7i_defconfig
@@ -482,7 +482,13 @@ CONFIG_BRCMFMAC_PCIE=y
 # CONFIG_WLAN_VENDOR_INTEL is not set
 # CONFIG_WLAN_VENDOR_INTERSIL is not set
 # CONFIG_WLAN_VENDOR_MARVELL is not set
-# CONFIG_WLAN_VENDOR_MEDIATEK is not set
+CONFIG_MT7601U=m
+CONFIG_MT76x0U=m
+CONFIG_MT76x2U=m
+CONFIG_MT7663U=m
+CONFIG_MT7663S=m
+CONFIG_MT7921S=m
+CONFIG_MT7921U=m
 # CONFIG_WLAN_VENDOR_MICROCHIP is not set
 CONFIG_RT2X00=m
 CONFIG_RT2500USB=m
@@ -496,6 +502,13 @@ CONFIG_RTL8187=m
 CONFIG_RTL8XXXU=m
 CONFIG_RTL8XXXU_UNTESTED=y
 CONFIG_RTW88=m
+CONFIG_RTW88_8822BS=m
+CONFIG_RTW88_8822BU=m
+CONFIG_RTW88_8822CS=m
+CONFIG_RTW88_8822CU=m
+CONFIG_RTW88_8723DU=m
+CONFIG_RTW88_8821CS=m
+CONFIG_RTW88_8821CU=m
 # CONFIG_WLAN_VENDOR_RSI is not set
 # CONFIG_WLAN_VENDOR_ST is not set
 # CONFIG_WLAN_VENDOR_TI is not set
