--- a/defconfig/sun8i_defconfig
+++ b/defconfig/sun8i_defconfig
@@ -516,7 +516,13 @@ CONFIG_BRCMFMAC_PCIE=y
 # CONFIG_WLAN_VENDOR_INTEL is not set
 # CONFIG_WLAN_VENDOR_INTERSIL is not set
 # CONFIG_WLAN_VENDOR_MARVELL is not set
-# CONFIG_WLAN_VENDOR_MEDIATEK is not set
+CONFIG_MT7601U=m
+CONFIG_MT76x0U=m
+CONFIG_MT76x2U=m
+CONFIG_MT7663U=m
+CONFIG_MT7663S=m
+CONFIG_MT7921S=m
+CONFIG_MT7921U=m
 # CONFIG_WLAN_VENDOR_MICROCHIP is not set
 # CONFIG_WLAN_VENDOR_PURELIFI is not set
 CONFIG_RT2X00=m
@@ -531,6 +537,13 @@ CONFIG_RTL8187=m
 CONFIG_RTL8XXXU=m
 CONFIG_RTL8XXXU_UNTESTED=y
 CONFIG_RTW88=m
+CONFIG_RTW88_8822BS=m
+CONFIG_RTW88_8822BU=m
+CONFIG_RTW88_8822CS=m
+CONFIG_RTW88_8822CU=m
+CONFIG_RTW88_8723DU=m
+CONFIG_RTW88_8821CS=m
+CONFIG_RTW88_8821CU=m
 CONFIG_RTW89=m
 # CONFIG_WLAN_VENDOR_RSI is not set
 # CONFIG_WLAN_VENDOR_SILABS is not set
@@ -607,7 +620,7 @@ CONFIG_AXP20X_POWER=y
 CONFIG_SENSORS_GPIO_FAN=m
 CONFIG_SENSORS_PWM_FAN=m
 CONFIG_THERMAL=y
-CONFIG_THERMAL_STATISTICS=y
+CONFIG_THERMAL_NETLINK=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_FAIR_SHARE=y
 CONFIG_THERMAL_GOV_BANG_BANG=y
@@ -803,6 +816,9 @@ CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_OTG=y
 CONFIG_USB_OTG_FSM=y
 CONFIG_USB_LEDS_TRIGGER_USBPORT=y
+CONFIG_USB_MON=m
+CONFIG_USB_XHCI_HCD=m
+CONFIG_USB_XHCI_PCI_RENESAS=m
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_HCD_PLATFORM=y
 CONFIG_USB_OHCI_HCD=y
@@ -820,7 +836,9 @@ CONFIG_USBIP_VUDC=y
 CONFIG_USB_MUSB_HDRC=y
 CONFIG_USB_MUSB_SUNXI=y
 CONFIG_MUSB_PIO_ONLY=y
+CONFIG_USB_DWC3=m
 CONFIG_USB_DWC2=y
+CONFIG_USB_DWC2_PCI=m
 CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_CH341=y
 CONFIG_USB_SERIAL_CP210X=y
@@ -828,6 +846,7 @@ CONFIG_USB_SERIAL_FTDI_SIO=y
 CONFIG_USB_SERIAL_PL2303=y
 CONFIG_USB_SERIAL_OPTION=y
 CONFIG_USB_LCD=m
+CONFIG_USB_ONBOARD_HUB=m
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_USB_GADGET=y
 CONFIG_U_SERIAL_CONSOLE=y
@@ -849,7 +868,9 @@ CONFIG_USB_CONFIGFS_F_MIDI=y
 CONFIG_USB_CONFIGFS_F_HID=y
 CONFIG_USB_CONFIGFS_F_PRINTER=y
 CONFIG_USB_CDC_COMPOSITE=y
+CONFIG_TYPEC=m
 CONFIG_MMC=y
+CONFIG_SDIO_UART=m
 CONFIG_MMC_SDHCI=m
 CONFIG_MMC_SDHCI_PCI=m
 CONFIG_MMC_DW=y
