add config options

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -41,8 +41,21 @@ if [[ -f "profile.txt" ]]; then
 	. profile.txt
 fi
 HOSTNAME="default"
-DISTRO="debian"
-DISTRO_VERSION="bullseye"
+
+# debian is defualt
+if [[ "$distro" == "devuan" ]]; then
+	DISTRO="devuan"
+	DISTRO_VERSION="chimaera"
+elif [[ "$distro" == "kali" ]]; then
+	DISTRO="kali"
+	DISTRO_VERSION="kali-last-snapshot"
+elif [[ "$distro" == "ubuntu" ]]; then
+	DISTRO="ubuntu"
+	DISTRO_VERSION="jammy"
+else
+	DISTRO="debian"
+	DISTRO_VERSION="bullseye"
+fi
 UBOOT_VERSION="v2023.01"
 BUILD_VERSION="1"
 MENUCONFIG="0"
