defconfig: `rockchip` `extra wireless`
CONFIG_RTW88_8822BS=m
CONFIG_RTW88_8822BU=m
CONFIG_RTW88_8822CS=m
CONFIG_RTW88_8822CU=m
CONFIG_RTW88_8723DU=m
CONFIG_RTW88_8821CS=m
CONFIG_RTW88_8821CU=m
CONFIG_RTL8723BS=m

Signed-off-by: Patrick Yavitz <pyavitz@gmail.com>

--- a/defconfig/rockchip_defconfig
+++ b/defconfig/rockchip_defconfig
@@ -513,9 +513,16 @@ CONFIG_RTL8XXXU=m
 CONFIG_RTL8XXXU_UNTESTED=y
 CONFIG_RTW88=m
 CONFIG_RTW88_8822BE=m
+CONFIG_RTW88_8822BS=m
+CONFIG_RTW88_8822BU=m
 CONFIG_RTW88_8822CE=m
+CONFIG_RTW88_8822CS=m
+CONFIG_RTW88_8822CU=m
 CONFIG_RTW88_8723DE=m
+CONFIG_RTW88_8723DU=m
 CONFIG_RTW88_8821CE=m
+CONFIG_RTW88_8821CS=m
+CONFIG_RTW88_8821CU=m
 CONFIG_RTW88_DEBUG=y
 CONFIG_RTW88_DEBUGFS=y
 # CONFIG_WLAN_VENDOR_RSI is not set
@@ -947,6 +954,7 @@ CONFIG_UIO_PCI_GENERIC=m
 CONFIG_STAGING=y
 CONFIG_RTL8192U=m
 CONFIG_RTLLIB=m
+CONFIG_RTL8723BS=m
 CONFIG_R8712U=m
 CONFIG_R8188EU=m
 CONFIG_RTS5208=m
