`Debian Image Builder`
RTW88 linux-next backport. Additions, fixes and hacks.
Add: 8723ds (Tinkerboard R2)

Signed-off-by: Patrick Yavitz <pyavitz@gmail.com>

--- a/defconfig/rockchip_defconfig
+++ b/defconfig/rockchip_defconfig
@@ -519,12 +519,11 @@ CONFIG_RTW88_8822CE=m
 CONFIG_RTW88_8822CS=m
 CONFIG_RTW88_8822CU=m
 CONFIG_RTW88_8723DE=m
+CONFIG_RTW88_8723DS=m
 CONFIG_RTW88_8723DU=m
 CONFIG_RTW88_8821CE=m
 CONFIG_RTW88_8821CS=m
 CONFIG_RTW88_8821CU=m
-CONFIG_RTW88_DEBUG=y
-CONFIG_RTW88_DEBUGFS=y
 # CONFIG_WLAN_VENDOR_RSI is not set
 # CONFIG_WLAN_VENDOR_ST is not set
 # CONFIG_WLAN_VENDOR_TI is not set
