--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -450,11 +450,17 @@ CONFIG_RTL8XXXU=m
 CONFIG_RTL8XXXU_UNTESTED=y
 CONFIG_RTW88=m
 CONFIG_RTW88_8822BE=m
+CONFIG_RTW88_8822BS=m
+CONFIG_RTW88_8822BU=m
 CONFIG_RTW88_8822CE=m
 CONFIG_RTW88_8822CS=m
+CONFIG_RTW88_8822CU=m
 CONFIG_RTW88_8723DE=m
+CONFIG_RTW88_8723DS=m
+CONFIG_RTW88_8723DU=m
 CONFIG_RTW88_8821CE=m
 CONFIG_RTW88_8821CS=m
+CONFIG_RTW88_8821CU=m
 CONFIG_RTW89=m
 CONFIG_RTW89_8852AE=m
 CONFIG_RTW89_8852CE=m
