--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -12,14 +12,26 @@ else
 fi
 JSON_FILE="https://kernel.org/releases.json"
 if [[ `curl -Ls $JSON_FILE | grep -w "version" | sed -n 4p | grep -w 5.15` ]]; then
-	LTS1_L="4p";
+	LTS1_L="4p"
 else
-	LTS1_L="5p";
+	if [[ `curl -Ls $JSON_FILE | grep -w "version" | sed -n 5p | grep -w 5.15` ]]; then
+		LTS1_L="5p"
+	else
+		if [[ `curl -Ls $JSON_FILE | grep -w "version" | sed -n 6p | grep -w 5.15` ]]; then
+			LTS1_L="6p"
+		fi
+	fi	
 fi
 if [[ `curl -Ls $JSON_FILE | grep -w "version" | sed -n 3p | grep -w 6.1` ]]; then
-	LTS2_L="3p";
+	LTS2_L="3p"
 else
-	LTS2_L="4p";
+	if [[ `curl -Ls $JSON_FILE | grep -w "version" | sed -n 4p | grep -w 6.1` ]]; then
+		LTS2_L="4p"
+	else
+		if [[ `curl -Ls $JSON_FILE | grep -w "version" | sed -n 5p | grep -w 6.1` ]]; then
+			LTS2_L="5p"
+		fi
+	fi
 fi
 LTS1=$(curl -Ls $JSON_FILE | grep -w "version" | sed -n $LTS1_L | sed -r 's/"version"://g' | sed -r '1s/\s+//g' | sed 's/,//g' | sed 's/\"//g')
 LTS2=$(curl -Ls $JSON_FILE | grep -w "version" | sed -n $LTS2_L | sed -r 's/"version"://g' | sed -r '1s/\s+//g' | sed 's/,//g' | sed 's/\"//g')
