lib/dialog/config: `make config`
Default Distro and Release: Debian Bookworm

Signed-off-by: Patrick Yavitz <pyavitz@gmail.com>

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -54,7 +54,7 @@ if [[ -f "profile.txt" ]]; then
 fi
 HOSTNAME="default"
 DISTRO="debian"
-DISTRO_VERSION="bullseye"
+DISTRO_VERSION="bookworm"
 UBOOT_VERSION="v2023.01"
 BUILD_VERSION="1"
 MENUCONFIG="0"
