--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -249,7 +249,7 @@ if [[ -f "userdata.txt" ]]; then
 	sed -i 's/=0/="0"/g' userdata.txt
 	sed -i 's/=1/="1"/g' userdata.txt
 	sed -i 's/LLVM_IAS="1"/LLVM_IAS=1/g' userdata.txt
-	echo -e "userdata file created."
+	echo -e "userdata.txt file created."
 	exit 0
 fi
 
