make config: USER_PKGS: `htop libsensors-dev`
Leave working example inside the userdata.txt file.

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -150,7 +150,7 @@ echo USERACCT= >> tmp0
 echo 'EMMC="0"' >> tmp0
 echo 'AIRCRACK="0"' >> tmp0
 echo 'ROOTPASSWD="0"' >> tmp0
-echo 'USER_PKGS=""' >> tmp0
+echo 'USER_PKGS="htop libsensors-dev"' >> tmp0
 echo 'CLANG="0"' >> tmp0
 echo 'CLANG_VERSION="clang-15"' >> tmp0
 echo 'CLANG_LLVM="LLVM=-15 LLVM_IAS=1"' >> tmp0
