patching: amlogic: 6.x.y: `consolidation` `round 2`
This commit drops 5.15.y support for the following boards:
odroidc4
odroidhc4
odroidn2
odroidn2l
odroidn2plus

Removed dryrun from U-Boot and Linux patching as it could sometimes produce false fails and skips.

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/odroid_defconfig
+++ b/defconfig/odroid_defconfig
@@ -768,6 +768,7 @@ CONFIG_GPIO_GENERIC_PLATFORM=y
 CONFIG_GPIO_SYSCON=y
 CONFIG_GPIO_PCA953X=m
 CONFIG_GPIO_PISOSR=m
+CONFIG_POWER_RESET_MESON64=y
 CONFIG_POWER_RESET_ODROID=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
