--- a/defconfig/odroid-lts_defconfig
+++ b/defconfig/odroid-lts_defconfig
@@ -768,6 +768,7 @@ CONFIG_GPIO_GENERIC_PLATFORM=y
 CONFIG_GPIO_SYSCON=y
 CONFIG_GPIO_PCA953X=m
 CONFIG_GPIO_PISOSR=m
+CONFIG_POWER_RESET_MESON64=y
 CONFIG_POWER_RESET_ODROID=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
