--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # builder version
-BUILDER="5.8"
+BUILDER="5.9"
 
 # script
 if [[ `curl -I https://github.com 2>&1 | grep 'HTTP/2 200'` ]]; then
@@ -44,6 +44,7 @@ PASSWORD=""
 VERSION="$LTS2"
 NETWORKMANAGER="1"
 USERACCT="0"
+RTL88XXAU="0"
 LOCALE="en_US.UTF-8"
 TIMEZONE="America/New_York"
 USER_NAMESERVER1="8.8.8.8"
@@ -144,10 +145,7 @@ echo CORES=\`nproc\` >> tmp0
 echo 'CFLAGS=""' >> tmp0
 echo 'KBUSER="marvin"' >> tmp0
 echo 'KBHOST="martian"' >> tmp0
-echo 'AIRCRACK="0"' >> tmp0
-echo 'RTL88XXAU="0"' >> tmp0
-echo 'RTL88X2BU="0"' >> tmp0
-echo 'RTL88XXCU="0"' >> tmp0
+echo "RTL88XXAU=${RTL88XXAU}" >> tmp0
 echo "set_locales(){" >> tmp0
 echo "apt install -y locales" >> tmp0
 echo "export LANGUAGE=${LOCALE}" >> tmp0
@@ -187,11 +185,11 @@ sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
 sed -i '17i### CUSTOM' userdata.txt
 sed -i '29i### COMPILER TUNING' userdata.txt
 sed -i '36i### WHOAMI AND HOST' userdata.txt
-sed -i '39i### WIRELESS' userdata.txt
-sed -i '44i### LOCALES' userdata.txt
-sed -i '52i### TIMEZONE' userdata.txt
-sed -i '57i### NAME SERVER' userdata.txt
-sed -i '60i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '39i### EXTRA WIRELESS' userdata.txt
+sed -i '41i### LOCALES' userdata.txt
+sed -i '49i### TIMEZONE' userdata.txt
+sed -i '54i### NAME SERVER' userdata.txt
+sed -i '57i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # customize your image
 custom_txt(){
