--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -74,10 +74,8 @@ exec 3>&1
 
 # Store data to $VALUES variable
 VALUES=$(dialog --ok-label "Submit" --no-cancel \
-	  --backtitle "DEBIAN IMAGE BUILDER: CONFIG MENU" \
-	  --title "" \
-	  --form "" \
-0 40 0 \
+	--backtitle "DEBIAN IMAGE BUILDER: CONFIG MENU" \
+	--title "" --form "" 0 40 0 \
 	" Name:"		1 1	"$NAME"			1 8 26 0 \
 	" Username:"		2 1	"$USERNAME"		2 12 22 0 \
 	" Password:"		3 1	"$PASSWORD"		3 12 22 0 \
