`Debian Image Builder`
builder=5.10

Users can now define the size of the img using the custom.txt
file. Just know if you go lower than the default, you may get
builder image errors.

This feature provides users with more flexibility when adding
$USER_PKGS.

Partitioning is now primarily done using parted instead of fdisk.

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # builder version
-BUILDER="5.9"
+BUILDER="5.10"
 
 # script
 if [[ `curl -I https://github.com 2>&1 | grep 'HTTP/2 200'` ]]; then
@@ -202,6 +202,9 @@ echo 'ENABLE_EFI="false"' >> custom.txt
 echo "" >> custom.txt
 echo "# Petitboot (ODROID): true false" >> custom.txt
 echo 'ENABLE_PETITBOOT="false"' >> custom.txt
+echo "" >> custom.txt
+echo "# Default Image Size: 3072MB" >> custom.txt
+echo 'IMGSIZE="3072MB"' >> custom.txt
 echo "" >> custom.txt
 echo "# Shrink Image (EXT4 Only): true false" >> custom.txt
 echo 'ENABLE_SHRINK="true"' >> custom.txt
