--- a/files/asound/orangepipc.conf
+++ b/files/asound/orangepipc.conf
@@ -1,10 +1,9 @@
-# hdmi audio is card 3
-pcm.!default {
-	type hw
-	card 2
-}
-
-ctl.!default {
-	type hw
-	card 2
-}
+#pcm.!default {
+#	type hw
+#	card 0
+#}
+#
+#ctl.!default {
+#	type hw
+#	card 0
+#}
