`Debian Image Builder`
builder = 5.11

Enable / Disable RTW88 wireless drivers (recommended)

Do not disable this unless you are 100% sure the board you are
building a kernel for doesn't require one of the SDIO drivers.

Supported drivers: https://github.com/lwfinger/rtw88

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # builder version
-BUILDER="5.10"
+BUILDER="5.11"
 
 # script
 if [[ `curl -I https://github.com 2>&1 | grep 'HTTP/2 200'` ]]; then
@@ -43,7 +43,8 @@ USERNAME=""
 PASSWORD=""
 VERSION="$LTS2"
 NETWORKMANAGER="1"
-RTL88XXAU="0"
+RTW88="1"
+RTL88XXAU="1"
 USERACCT="0"
 LOCALE="en_US.UTF-8"
 TIMEZONE="America/New_York"
@@ -143,6 +144,7 @@ echo CORES=\`nproc\` >> tmp0
 echo 'CFLAGS=""' >> tmp0
 echo 'KBUSER="marvin"' >> tmp0
 echo 'KBHOST="martian"' >> tmp0
+echo "RTW88=${RTW88}" >> tmp0
 echo "RTL88XXAU=${RTL88XXAU}" >> tmp0
 echo "set_locales(){" >> tmp0
 echo "apt install -y locales" >> tmp0
@@ -184,10 +186,10 @@ sed -i '17i### CUSTOM' userdata.txt
 sed -i '29i### COMPILER TUNING' userdata.txt
 sed -i '36i### WHOAMI AND HOST' userdata.txt
 sed -i '39i### EXTRA WIRELESS' userdata.txt
-sed -i '41i### LOCALES' userdata.txt
-sed -i '49i### TIMEZONE' userdata.txt
-sed -i '54i### NAME SERVER' userdata.txt
-sed -i '57i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '42i### LOCALES' userdata.txt
+sed -i '50i### TIMEZONE' userdata.txt
+sed -i '55i### NAME SERVER' userdata.txt
+sed -i '58i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # customize your image
 custom_txt(){
