--- a/defconfig/odroid-lts_defconfig
+++ b/defconfig/odroid-lts_defconfig
@@ -1155,8 +1155,12 @@ CONFIG_TYPEC_TCPM=m
 CONFIG_TYPEC_FUSB302=m
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
+CONFIG_SDIO_UART=y
 CONFIG_MMC_MESON_GX=y
 CONFIG_MMC_SPI=y
+CONFIG_MMC_DW=m
+CONFIG_MMC_DW_PCI=m
+CONFIG_MMC_USHC=m
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_PWM=y
 CONFIG_LEDS_SYSCON=y
